# Medical-RAG-Chatbot

./: .gitignore  Dockerfile  README.md  mlflow.db  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
configs/: ingestion_config.py
data/: .gitignore  chroma_db.dvc
scripts/: run_ingestion.py  run_vector_pipeline.py  test_rag.py  test_retrieval.py  test_vector_load.py
scripts/evaluation/: run_batch_eval.py  test_eval.py
src/evaluation/: eval_questions.json  evaluator.py
src/experiments/: mlflow_manager.py
src/pipelines/: ingestion.py  rag_chain.py  retrieval.py  vectorstore.py
src/utils/: exceptions.py  logger.py  session_store.py
streamlit_app/: app.py
