[project]
name = "medical-rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.4.0",
    "dvc>=3.66.0",
    "fastapi>=0.128.0",
    "langchain>=1.2.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.1.0",
    "pypdf>=6.5.0",
    "pytest>=9.0.2",
    "streamlit>=1.52.2",
    "uvicorn>=0.40.0",
]
[tool.pytest.ini_options]
testpaths = [
  "tests"
]
